# GameOfLife

./: README.md
GameOfLife/: CMakeLists.txt  test.lif
GameOfLife/include/: GameOfLife.h  Universe.h
GameOfLife/src/: GameOfLife.cpp  Universe.cpp  main.cpp
GameOfLife/tests/: Tests.cpp
